--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Telegram Marketplace</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#6b7280" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <title>Impulse Marketplace</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style>
+      /* Prevent scrolling issues in Telegram */
+      html, body {
+        overflow-x: hidden;
+        -webkit-overflow-scrolling: touch;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      
+      /* Telegram WebApp specific styles */
+      body {
+        background: var(--tg-theme-bg-color, #ffffff);
+        color: var(--tg-theme-text-color, #000000);
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      }
+      
+      #root {
+        min-height: 100vh;
+        min-height: 100dvh; /* Dynamic viewport height for mobile */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
